--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -7,6 +7,11 @@ html, body {
     margin: 0;
 }
 
+h2{
+ margin:10px 0px;
+ color:black;
+}
+
 .full-height {
     height: 100vh;
 }
@@ -31,9 +36,7 @@ html, body {
     text-align: center;
 }
 
-.title {
-    font-size: 84px;
-}
+
 
 .links > a {
     color: #636b6f;
@@ -72,8 +75,58 @@ html, body {
 
 }
 
+
+.column {
+    float: left;
+    width: 33.3%;
+    margin-bottom: 16px;
+    padding: 0 8px;
+  }
+  
+  @media screen and (max-width: 650px) {
+    .column {
+      width: 100%;
+      display: block;
+    }
+  }
+  
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  }
+  
+  .container {
+    padding: 0 16px;
+  }
+  
+  .container::after, .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  
+  .title {
+    color: grey;
+  }
+  
+  .button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+  }
+  
+  .button:hover {
+    background-color: #555;
+  }
+
 @media only screen and (max-width: 600px) {
     .jumbotron {
         padding: 1rem 2rem;
     }
   }
+
